--- a/index2.html
+++ b/index2.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>index2</title>
+    <style>
+        p {
+            width: 100px;
+            height: 50px;
+            background: red;
+        }
+    </style>
 </head>
 <body>
     <div>
@@ -23,6 +30,8 @@
     <div>
         aaa
     </div>
+
+<p>这是p</p>
 
 </body>
 </html>
